--- a/React - Udemy/src/Components/Chart/ChartBar.css
+++ b/React - Udemy/src/Components/Chart/ChartBar.css
@@ -7,7 +7,7 @@
   
   .chart-bar__inner {
     height: 100%;
-    width: 5px;
+    width: 100%;
     border: 1px solid #313131;
     border-radius: 12px;
     background-color: #c3b4f3;
