--- a/Food Ordering App/src/components/Meals/AvailableMeals.module.css
+++ b/Food Ordering App/src/components/Meals/AvailableMeals.module.css
@@ -4,6 +4,17 @@
     margin: 2rem auto;
     animation: meals-appear 1s ease-out forwards;
   }
+
+  .mealloading{
+    text-align: center;
+    color: white;
+    font-size: 40px;
+  }
+  .mealloadingerr{
+    text-align: center;
+    color: rgb(255, 0, 0);
+    font-size: 40px;
+  }
   
   .meals ul {
     list-style: none;
@@ -22,3 +33,5 @@
       transform: translateY(0);
     }
   }
+
+ 
