--- a/image Slider/src/App.css
+++ b/image Slider/src/App.css
@@ -36,11 +36,11 @@
 
 .slide {
   opacity: 0;
-  transition-duration: 1s ease;
+  /* transition-duration: 1s ease; */
 }
 
 .slide.active {
   opacity: 1;
-  transition-duration: 1s;
+  /* transition-duration: 1s; */
   /* transform: scale(1.08); */
 }
